@@ -2,6 +2,8 @@ package com.javaproject.customer_springboot.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -26,12 +28,12 @@ public class CustomerService {
     
     public List<CustomerDTO> listActiveCustomer(){
     	List<Customer> customer = customerRepository.findByStatusAtivo();
-    	return customer.stream().map(CustomerDTO::new).toList();
+    	return customer.stream().map(CustomerDTO::new).collect(Collectors.toList());
     }
     
     public List<CustomerDTO> listInactiveCustomer(){
     	List<Customer> customer = customerRepository.findByStatusInativo();
-    	return customer.stream().map(CustomerDTO::new).toList();
+    	return customer.stream().map(CustomerDTO::new).collect(Collectors.toList());
     }
     
     public Page<CustomerDTO> listCustomerPageable(int page, int size) {
@@ -46,9 +48,10 @@ public class CustomerService {
     			.map(CustomerDTO::new);
     }
     
-    public CustomerDTO findCustomer(Long id) {
-    	Customer customer = customerRepository.findById(id).get();
-		return new CustomerDTO(customer);
+    public CustomerDTO findCustomer(Long id) throws CustomerException {
+    	Optional<Customer> customer = customerRepository.findById(id);
+    	return new CustomerDTO(customer.orElseThrow(
+				() -> new CustomerException("Cliente não encontrado")));
     }
     
     public CustomerDTO findCustomerNumber(String number) throws CustomerException {
@@ -63,28 +66,33 @@ public class CustomerService {
 				() -> new CustomerException("Cliente não encontrado")));
     }
     
-    public CustomerDTO findCustomerFantasyName(String number) throws CustomerException {
-    	Optional<Customer> customer = customerRepository.findByCustomerFantasyNameContainingIgnoreCase(number);
-		return new CustomerDTO(customer.orElseThrow(
+    public CustomerDTO findCustomerFantasyName(String name) throws CustomerException {
+    	Optional<Customer> customer = customerRepository.findByCustomerFantasyNameContainingIgnoreCase(name);
+    	return new CustomerDTO(customer.orElseThrow(
 				() -> new CustomerException("Cliente não encontrado")));
     }
     
     public CustomerDTO createCustomer(CustomerDTO customerDTO) throws CustomerException {
-        if(customerRepository.findByCustomerNumber(customerDTO.getCustomerNumber()) !=null) {
+        if(!customerRepository.findByCustomerNumber(customerDTO.getCustomerNumber()).isEmpty()) {
             throw new CustomerException("Este cliente já esta cadastrado: " + customerDTO.getCustomerNumber());
     	}
-        
-    	Customer customer = new Customer(customerDTO);
+        Customer customer= new Customer(customerDTO);
+        Customer customer2 = customerRepository.save(customer);
+    	return new CustomerDTO(customer2);
+    }
+    
+    public CustomerDTO updateCustomer(CustomerDTO customerDTO) throws CustomerException {
+        if(customerRepository.findByCustomerNumber(customerDTO.getCustomerNumber()).isEmpty()) {
+            throw new CustomerException("Este cliente não esta cadastrado: " + customerDTO.getCustomerNumber());
+    	}
+        Customer customer= new Customer(customerDTO);
     	return new CustomerDTO(customerRepository.save(customer));
     }
     
-    public CustomerDTO updateCustomer(CustomerDTO customerDTO) {
-    	Customer customer = new Customer(customerDTO);
-    	return new CustomerDTO(customerRepository.save(customer));
-    }
-    
-    public void deleteCustomer(Long id) {
-    	Customer customer = customerRepository.findById(id).get();
-    	customerRepository.delete(customer);
+    public void deleteCustomer(Long id) throws CustomerException {
+    	Optional<Customer> customer = customerRepository.findById(id);
+    	customer.orElseThrow(
+				() -> new CustomerException("Cliente não encontrado"));
+    	customerRepository.delete(customer.get());
     }
 }
